--- a/style.css
+++ b/style.css
@@ -49,10 +49,18 @@
   justify-content: space-between;
 }
 
+#numeradorTextFactor,
+#denominadorTextFactor {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
 .fill {
   margin-top: 10px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   height: 50px;
@@ -62,8 +70,17 @@
   border-radius: 5px;
 }
 
-#numeradorText {
-  border-bottom: 3px solid rgba(0, 0, 0, 0.8);
+.termino {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.fractionLine {
+  background-color: rgba(0, 0, 0, 0.8);
+  height: 3px;
+  width: 100%;
 }
 
 .fci-container {
@@ -93,4 +110,9 @@ input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
+}
+
+#primerIgual {
+  /* display: none; */
+  margin: 0px 10px;
 }
