--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@
   display: flex;
   flex-direction: column;
   padding: 10px;
+  box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.3);
 }
 
 .formula-content-item {
@@ -63,6 +64,7 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
   height: 50px;
   color: rgba(0, 0, 0, 0.8);
   background-color: rgba(255, 255, 255, 0.8);
@@ -75,11 +77,23 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding: 15px;
+  background-color: #102030;
+  color: white;
+  border-radius: 10px;
+  margin: 10px 10px;
+  opacity: 0;
+  transition: all 0.5s ease;
+}
+
+.termino-content {
+  margin: 15px;
 }
 
 .fractionLine {
-  background-color: rgba(0, 0, 0, 0.8);
-  height: 3px;
+  background-color: white;
+  margin-bottom: 3px;
+  height: 2px;
   width: 100%;
 }
 
@@ -110,9 +124,4 @@ input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   -webkit-appearance: none;
   margin: 0;
-}
-
-#primerIgual {
-  /* display: none; */
-  margin: 0px 10px;
 }
